force-app/main/default/objects/PSWheelItemDef__c/PSWheelItemDef__c.object-meta.xml
<CustomObject>
    <label>PSWheelItemDef</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>PSWheelItemDef ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PSWheelItemDef</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>