force-app/main/default/objects/PSWheelItemDef__c/fields/Active_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Active_Image_URL__c</fullName>
    <label>Active Image URL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>