force-app/main/default/objects/PSWheelItemDef__c/fields/Inactive_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Image_URL__c</fullName>
    <label>Inactive Image URL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>