force-app/main/default/objects/PSWheelItemDef__c/fields/Match_Value__c.field-meta.xml
<CustomField>
    <fullName>Match_Value__c</fullName>
    <label>Match Value</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>