force-app/main/default/objects/PSWheelItemDef__c/fields/PSWheelTemplate__c.field-meta.xml
<CustomField>
    <fullName>PSWheelTemplate__c</fullName>
    <label>PSWheelTemplate</label>
    <referenceTo>PSWheelTemplate__c</referenceTo>
    <relationshipLabel>PSWheelItemDef</relationshipLabel>
    <relationshipName>PSWheelItemDef</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>