force-app/main/default/objects/PSWheelItemDef__c/fields/Show_Label__c.field-meta.xml
<CustomField>
    <fullName>Show_Label__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Label</label>
    <type>Checkbox</type>
</CustomField>